      between a library dev package and the shared library.  Thanks,
      Norbert Preining.  (Closes: #548218)
    + [ADB] Fix an uninitialised value warning when processing a
      -dev package which has no Depends: fields.  Thanks, Lucas
      Nussbaum.
    + [RA] build-info-in-binary-control-file-section and
      debian-control-with-duplicate-fields are now serious (ftpmaster
      reject).
  * checks/control-files.desc:
    + [RA] not-allowed-control-file, control-file-has-bad-permissions, and
      control-file-has-bad-owner are now serious (ftpmaster reject).
      Mention that the config control file should also be executable.
  * checks/copyright-file{,.desc}:
    + [FL] Add special exception to no-copyright-file for perl.
      See #522827 for discussion.  (Closes: #553262)
    + [FL] Extend match for exceptions to copyright-refers-to-symlink-license
      to catch more ways to specify Perl's license.  Patch from
      Salvatore Bonaccorso.  (Closes: #549596)
    + [RA] copyright-lists-upstream-authors-with-dh_make-boilerplate
      removed, as some package maintainers prefer to use Author(s) and
      have filled out the copyright file.
    + [RA] Add additional dh_make template strings to the
      helper-templates-in-copyright check, including the templates for
      upstream author or copyright holder, which effectively replaces
      copyright-lists-upstream-authors-with-dh_make-boilerplate with far
      fewer false positives.
    + [RA] Remove a duplication of the check for "This copyright info was
      automatically extracted from the perl module" by dh-make-perl, and
      ensure that this is copyright-contains-dh-make-perl-boilerplate and
      not helper-templates-in-copyright, since it is lower severity.
    + [RA] copyright-refers-to-old-directory, old-style-copyright-file,
      usr-share-doc-symlink-without-dependency,
      usr-share-doc-symlink-to-foreign-package,
      copyright-refers-to-incorrect-directory, and