@@ -156,3 +156,8 @@ Info: The given package appears to be a shared library -dev package, but
  to the correct files in the shared library package, a -dev package should
  normally use <tt>(= ${binary:Version})</tt> with the dependency on the
  shared library package.
+ .
+ If the -dev package is architecture-independent, it cannot use this
+ dependency since it would break binary NMUs.  Instead, a dependency of
+ <tt>(>= ${source:Upstream-Version}), (<< ${source:Version}.1~)</tt> or
+ similar is usually the correct approach.
