@@ -51,7 +51,7 @@ Description: {$description} (shared lib 3)
 
 Package: libcontrol-file-doc
 Section: doc
-Architecture: {$architecture}
+Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description} (doc package)
  Doc package.
@@ -66,6 +66,20 @@ Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description} (dev package with version)
  Dev package containing a number.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
+
+Package: libcontrol-file-all-dev
+Section: libdevel
+Architecture: all
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, libcontrol-file-doc,
+ libcontrol-file-foo1 (>= $\{source:Upstream-Version\}),
+ libcontrol-file-foo1 (<= $\{source:Version\}.1~),
+ libcontrol-file-baz9-4 (>= $\{source:Version\})
+Description: {$description} (arch: all dev package)
+ Architecture-independent development package.
  .
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
